# OS_labs

Lab2/: CMakeLists.txt  main.cpp
Lab2/include/: matrix.h  threads.h
Lab2/report/src/: benchmark.tex  literature.tex  problem.tex  src.tex  thinks.tex  titlepage.tex
Lab2/src/: matrix.cpp  threads.cpp
